	- mrt_system() did not return valid strings when no output was written at all
	- mrt_system() might have omitted the last block of the output data
	- added "stdout_out" parameter to execute_mame() to get the stdout data
	- removed option "test_createconfig"
	- added option "test_frontend" to test various frontend options
	- removed get_inifile()
	- added get_filename_base() to common.c/.h
	- fixed some GCC 4.6 compilation warnings
	- added option "use_slots" to test slots
	- improved configuration loading error messages
	- added -verifysoftware to "test_frontend"
	- only parse "devices" if necessary
	- execute_mame() now correctly returns if the execution was successful (fixes second autosave being executed when the first one failed)
	- bail out when -listxml failed
	- write all errors to stderr
	- improve some log messages
	- added makefile options DEBUG and LOG_ALLOC
	- removed obsolete wiki links from README
	- check "xpath_expr" for DRIVER_ROOT
	- disallow usage of "use_gdb" and "use_valgrind" at the same time
	- do not check the default ramsize again in combined bios/ram runs
	- renamed clear_directory_nosnap() to clear_directory_2()
	- renamed clear_callback_nosnap() to clear_callback_2()
	- do not remove the -log and valgrind output with "store_output" set to 2
	- added support for running only the first entry of the softwarelist when "use_softwarelist" is set to 2
	
	create_report
	- added a summary at the end when "dokuwiki_format" is set
	- added support for multiple input folders (separated by ';')
	- updated comparison report to invoke pngcmp and output in HTML
	- added option "output_folder" for comparison reports
	- skip *_listsoftware.xml files
	- added option "recursive"
	- added header to docuwiki format
	- added command-line to docuwiki format
	- added speed comparison report (report_type 2)
	- fixed PNG comparison - images were in the wrong order
	- added support for slots
	- create "output_folder"